unpackaged/main/default/objects/MemberPlan/fields/COBRA_Date__c.field-meta.xml
<CustomField>
    <fullName>COBRA_Date__c</fullName>
    <description>Snowflake integration field</description>
    <label>COBRA Date</label>
    <type>Date</type>
</CustomField>