unpackaged/main/default/objects/MemberPlan/fields/Dental_Plan__c.field-meta.xml
<CustomField>
    <fullName>Dental_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to purchaser plan</description>
    <label>Dental Plan</label>
    <referenceTo>PurchaserPlan</referenceTo>
    <relationshipLabel>Member Plans</relationshipLabel>
    <relationshipName>Member_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>