unpackaged/main/default/objects/MemberPlan/fields/Dental_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Dental_Plan_ID__c</fullName>
    <label>Dental Plan ID</label>
    <length>38</length>
    <type>Text</type>
</CustomField>