unpackaged/main/default/objects/MemberPlan/fields/Member_Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>Member_Patient_ID__c</fullName>
    <description>snowflake integration field</description>
    <externalId>true</externalId>
    <label>Member Patient ID</label>
    <length>54</length>
    <type>Text</type>
</CustomField>