unpackaged/main/default/objects/MemberPlan/fields/Member_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Member_Plan_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>snowflake integration field</description>
    <externalId>true</externalId>
    <label>Member Plan ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>