unpackaged/main/default/objects/MemberPlan/fields/Payer_ID__c.field-meta.xml
<CustomField>
    <fullName>Payer_ID__c</fullName>
    <description>Snowflake integration field</description>
    <externalId>true</externalId>
    <label>Payer ID</label>
    <length>38</length>
    <type>Text</type>
</CustomField>