unpackaged/main/default/objects/MemberPlan/fields/Plan_Number__c.field-meta.xml
<CustomField>
    <fullName>Plan_Number__c</fullName>
    <description>snowflake integration field</description>
    <externalId>true</externalId>
    <label>Plan Number</label>
    <length>38</length>
    <type>Text</type>
</CustomField>