unpackaged/main/default/objects/MemberPlan/fields/Rx_Plan__c.field-meta.xml
<CustomField>
    <fullName>Rx_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to purchaser plan</description>
    <label>Rx Plan</label>
    <referenceTo>PurchaserPlan</referenceTo>
    <relationshipLabel>Member Plans (Rx Plan)</relationshipLabel>
    <relationshipName>Member_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>