unpackaged/main/default/objects/MemberPlan/fields/Rx_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Rx_Plan_ID__c</fullName>
    <description>snowflake integration field</description>
    <label>Rx Plan ID</label>
    <length>38</length>
    <type>Text</type>
</CustomField>