unpackaged/main/default/objects/MemberPlan/fields/Subscriber_Number__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Number__c</fullName>
    <description>snowflake integration field</description>
    <externalId>true</externalId>
    <label>Subscriber Number</label>
    <length>54</length>
    <type>Text</type>
</CustomField>